# xario-studio

./: .gitignore  Makefile  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_users.py  0003_superadmin.py  0004_shorts_clips_json.py  0005_notifications.py  0006_subtitles_enabled.py  0007_generation_mode.py  0008_subtitle_language.py  0009_transcript_text.py  0010_transcript_segments.py  0011_tts_voice.py  0012_dub_target_language.py  0013_images.py  0014_image_prompt_inputs.py  0015_params_json.py  0016_image_params.py
backend/src/app/: main.py
backend/src/app/api/v1/: deps.py  router.py
backend/src/app/api/v1/endpoints/: auth.py  images.py  notifications.py  settings.py  shorts.py  users.py  videos.py
backend/src/app/core/: celery_app.py  config.py  exceptions.py  ratelimit.py  security.py  uploads.py
backend/src/app/db/: base.py  enums.py  session.py
backend/src/app/db/models/: __init__.py  image.py  notification.py  short.py  user.py  video.py
backend/src/app/modules/: base_repository.py
backend/src/app/modules/auth/: repository.py  schemas.py  service.py
backend/src/app/modules/images/: repository.py  schemas.py  service.py
backend/src/app/modules/notifications/: repository.py  schemas.py
backend/src/app/modules/shorts/: repository.py  schemas.py  service.py
backend/src/app/modules/videos/: repository.py  schemas.py  service.py
backend/src/app/workers/: _imaging_run.py  _tts_batch.py  aligner.py  cleanup.py  dub.py  ffmpeg.py  highlights.py  image_processor.py  imaging.py  queues.py  reconcile.py  reframe.py  separate.py  slideshow.py  subtitle.py  tasks.py  tools.py  transcriber.py  tts.py  video_processor.py
backend/src/app/workers/ai/: __init__.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/tests/: conftest.py  test_api.py  test_cancel.py  test_dub.py  test_ffmpeg_helpers.py  test_highlights.py  test_image_processor.py  test_imaging.py  test_maintenance.py  test_ownership.py  test_pipeline.py  test_production_secrets.py  test_queues.py  test_reconcile.py  test_security.py  test_segments.py  test_slideshow.py  test_tools_api.py
devops/: docker-compose.yml
(+71 files in other folders)
